<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZBackup</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_item">Add</string>
    <string name="action_backup_all">Backup</string>
    <string name="action_backup_selected">Selected</string>
    <string name="action_backup_cancel">Cancel</string>
    <string name="action_about">About</string>
    <string name="title_activity_main">ZBackup</string>
    <string name="title_local_backup">Local</string>
    <string name="title_network_backup">Network</string>
    <string name="file_path">File Path</string>
</resources>
