<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ozelentok.zbackup.MainActivity">

    <item android:id="@+id/action_backup_all"
        android:title="@string/action_backup_all"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_backup_selected"
        android:title="@string/action_backup_selected"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_item"
        android:title="@string/action_add_item"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_backup_cancel"
          android:title="@string/action_backup_cancel"
          android:orderInCategory="4"
          app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="5"
        app:showAsAction="never" />


    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="6"
        app:showAsAction="never" />

</menu>
